// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App render tests Should find the intern components 1`] = `
<div
  className="app"
>
  <Title />
  <Box>
    <Input
      onCreateTodo={[Function]}
      onSelectAll={[Function]}
    />
    <TaskList
      list={
        Array [
          Object {
            "id": 1,
            "text": "todoText",
          },
          Object {
            "id": 1,
            "text": "todoText",
          },
        ]
      }
      onRemoveItem={[Function]}
      onUpdateItem={[Function]}
    />
    <Footer
      size={2}
    />
  </Box>
</div>
`;

exports[`App render tests renders correctly on loading data 1`] = `
<div
  className="app"
>
  <Title />
  <Box>
    <Input
      onCreateTodo={[Function]}
      onSelectAll={[Function]}
    />
    <span>
      LOADING....
    </span>
    <Footer
      size={0}
    />
  </Box>
</div>
`;
